change smooth size

--- a/P1.ipynb
+++ b/P1.ipynb
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -570,8 +570,7 @@
     "    # TODO: put your pipeline here,\n",
     "    # you should return the final output (image with lines are drawn on lanes)\n",
     "    \n",
-    "    smoothing_size = 3    # number of time steps to smooth over\n",
-    "\n",
+    "    smoothing_size = 6    # number of time steps to smooth over\n",
     "    \n",
     "    gray = grayscale(image)\n",
     "    \n",
@@ -590,15 +589,18 @@
     "    # Extend Lanes\n",
     "    lanes = mark_lanes(masked_edges, rho, theta, threshold, min_line_len, max_line_gap)\n",
     "    \n",
+    "    # appending the lane value means that it will be counted\n",
+    "    # twice in the averaging routine.\n",
+    "    # placing more emphasis on the current time.\n",
+    "    last_lanes.append(lanes)\n",
+    "    \n",
     "    # if we have enough previous data do smoothing\n",
     "    if len(last_lanes) > 0:\n",
     "        for x in last_lanes:\n",
     "            lanes = x + lanes\n",
     "        lanes = lanes/(len(last_lanes)+1)    # average\n",
     "        lanes = lanes.astype(int)    # convert to int\n",
-    "    \n",
-    "    last_lanes.append(lanes)    # append the smoothed value\n",
-    "    \n",
+    "        \n",
     "    if len(last_lanes) > smoothing_size:    # keep the last list to just the smoothing size\n",
     "        last_lanes.pop(0)\n",
     "    \n",
@@ -621,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {
     "collapsed": false
    },
@@ -638,7 +640,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " 33%|██████████████████████████▋                                                      | 73/222 [00:02<00:04, 31.86it/s]"
+      "100%|███████████████████████████████████████████████████████████████████████████████▋| 221/222 [00:06<00:00, 34.14it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: white.mp4 \n",
+      "\n",
+      "Wall time: 7.39 s\n"
      ]
     }
    ],
@@ -658,11 +670,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<video width=\"960\" height=\"540\" controls>\n",
+       "  <source src=\"white.mp4\">\n",
+       "</video>\n"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "HTML(\"\"\"\n",
     "<video width=\"960\" height=\"540\" controls>\n",
@@ -687,12 +716,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] >>>> Building video yellow.mp4\n",
+      "[MoviePy] Writing video yellow.mp4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|███████████████████████████████████████████████████████████████████████████████▉| 681/682 [00:21<00:00, 31.86it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[MoviePy] Done.\n",
+      "[MoviePy] >>>> Video ready: yellow.mp4 \n",
+      "\n",
+      "Wall time: 22.3 s\n"
+     ]
+    }
+   ],
    "source": [
+    "last_lanes = []    # clear the history from last video\n",
     "yellow_output = 'yellow.mp4'\n",
     "clip2 = VideoFileClip('solidYellowLeft.mp4')\n",
     "yellow_clip = clip2.fl_image(process_image)\n",
@@ -701,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 41,
    "metadata": {
     "collapsed": false
    },
@@ -718,7 +774,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +795,16 @@
     "\n",
     "Congratulations on finding the lane lines!  As the final step in this project, we would like you to share your thoughts on your lane finding pipeline... specifically, how could you imagine making your algorithm better / more robust?  Where will your current algorithm be likely to fail?\n",
     "\n",
-    "Please add your thoughts below,  and if you're up for making your pipeline more robust, be sure to scroll down and check out the optional challenge video below!\n"
+    "Please add your thoughts below,  and if you're up for making your pipeline more robust, be sure to scroll down and check out the optional challenge video below!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I love the hough transform.  Such an interesting way of thinking about a problem.  I'm generally amazed at how much information from the video we disregard.  The simple action of masking the vido makes me cringe.  I just think about if I were to drive with that mask on my windshield.\n",
+    "\n",
+    "How could I make my algorithm better?  I would like to have a motion/sense update cycle.  Caputre the x velocity from the lane markings and place this in the motion update for prediction of the next lane marking.  Capture lane marking color for use in excluding non-lane marking data.  I can see the second video the road edge pulls my line towards the end of the video."
    ]
   },
   {
@@ -837,6 +902,7 @@
     }
    ],
    "source": [
+    "last_lanes = []    # clear the history from last video\n",
     "challenge_output = 'extra.mp4'\n",
     "clip2 = VideoFileClip('challenge.mp4')\n",
     "challenge_clip = clip2.fl_image(process_image)\n",
